[package]
name = "pidlock"
version = "0.1.2"
authors = ["Paul Hummer <paul@eventuallyanyway.com>"]
license = "MIT"
description = "A library for using pidfiles as resource locks"
repository = "https://github.com/rockstar/pidlock"
keywords = ["pidfile", "file", "filelock", "server", "lock"]
categories = ["filesystem"]
readme = "README.md"
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]


[dependencies]
libc = "0.2.40"
log = "0.4.1"

[badges]
travis-ci = { repository = "rockstar/pidlock" }
