[package]
name = "pidlock"
version = "0.2.1"
authors = ["Paul Hummer <paul@eventuallyanyway.com>"]
license = "MIT"
edition = "2024"
description = "A library for using pidfiles as resource locks"
repository = "https://github.com/rockstar/pidlock"
keywords = ["pidfile", "file", "filelock", "server", "lock"]
categories = ["filesystem"]
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE-MIT"]

[features]
default = []

[dependencies]
log = { version = "0.4", optional = true }
thiserror = "1.0"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
rand = "0.8.2"
tempfile = "3.21.0"

[badges]
maintenance = { status = "actively-developed" }

[lints.clippy]
expect_used = { level = "deny" }
panic = { level = "deny" }
print_stdout = { level = "deny" }
undocumented_unsafe_blocks = { level = "deny" }
unwrap_used = { level = "deny" }
